<resources>
    <string name="app_name">Basic Todo</string>
    <string name="action_settings">Settings</string>
    <string name="nothing_todo">You don\'t have anything to do :)</string>
    <string name="remind_me">Remind Me</string>
    <string name="title">Title</string>
    <string name="choose_time">Time</string>
    <string name="choose_date">Date</string>
    <string name="set_remind_date_and_time">Reminder has been set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me_at">Write to me at</string>
    <string name="created_by">Design by Emmanuel Davies</string>
    <string name="done">Done</string>
    <string name="night_mode_off_text">Night mode is off</string>
    <string name="default_date_reminder">Today</string>
    <string name="date_error_wrong_date">Enter a data in the future.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_text">Night mode is on</string>

    <string-array name="snooze_options">
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="night_mode_pref_key">NightModePreference</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_text">Please enter what you will like to do</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="email_address">edavies933@gmail.com</string>
    <string name="set_reminder_on">Set Reminder on</string>
</resources>
