<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <include layout="@layout/basic_toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:elevation="3dp"
        card_view:cardBackgroundColor="@color/mdtp_dark_gray"
        card_view:cardCornerRadius="1dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">


            <ImageView
                android:layout_gravity="center"
                android:id="@+id/aboutImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/aboutVersionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/app_version" />


        </LinearLayout>


    </android.support.v7.widget.CardView>


    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/created_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/contact_me_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/aboutContactMe"
        android:layout_marginTop="4dp"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>